--- a/css/style.css
+++ b/css/style.css
@@ -13,24 +13,25 @@ body {
 	letter-spacing: 1px;
 	color: white;
 	font-family: AvenirNext-Bold;	
+	overflow: hidden;
 }
 
 .widget {
 	display: flex;
+	flex-direction: column;
 	text-align: center;
 	box-shadow: 0px 0 10px 10px rgba(0, 0, 0, .8);
 	margin: 12% 12%;
 	width: 600px;
 	height: 400px;
 	align-self: center;
-	flex-direction: column;
 }
 
 .widget-row {
+	display: flex;
+    flex-direction: row; 
     height: 50%;
     width: 100%;
-    display: flex;
-    flex-direction: row; 
 }
 
 
@@ -54,7 +55,6 @@ body {
 }
 
 .widget-text {
-
 	margin-left: 20%;
 }
 
@@ -75,7 +75,7 @@ body {
 }
 
 
-.no-name-city header{
+.no-name-city header {
 	background-color: #dc3d66;
 	height: 50%;
 	width: 100%;
@@ -85,27 +85,27 @@ body {
 	padding-top: 10px;
 }
 
-.no-name-city main{
-	background-color: #b43255;
+.no-name-city main {
 	display: flex;
+	background-color: #b43255;
 	height: 50%;
 }
 
-.no-name-city main ul{
-	height: 100%;
+.no-name-city main ul {
 	display: flex;
     justify-content: center;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	align-content: center;
 }
 
-.mini-weather li{
-	width: 25%;
-	list-style-type: none;
+.mini-weather li {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	width: 25%;
+	list-style-type: none;
 	font-size: 12px;
 	align-content: center;
 	padding-top: 10px;
